# equations

./: CMakeLists.txt  Makefile  README.md
src/: argparse.cpp  argparse.h  consumer.h  equation.cpp  equation.h  ipc.h  main.cpp  producer.h  task.h
tests/: run.py
